--- a/go/jamtis.html
+++ b/go/jamtis.html
@@ -15,7 +15,7 @@
   </script>
 
   <script>
-    const YT  = "https://youtube.com/live/izgYtax8qfY"; // YouTubeライブ
+    const YT  = "https://youtube.com/live/izgYtax8qfY"; // YouTubeライブURL
     const SRC = "jamtis"; // JAMTIS経由ラベル
 
     window.addEventListener("load", () => {
